# issue-assistant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  action.yml  pyproject.toml
.github/actions/issue-assistant/: action.yml
.github/actions/issue-assistant-dev-from-source/: action.yml
.github/workflows/: issue-assistant.yml
docs/: EXPLAINABILITY.md  ISSUE_SUMMARY.md  MAINTAINER_LOAD.md
src/issue_assistant/: artifacts.py  automation.py  cli.py  github.py  models.py  phases.py
src/issue_assistant/phases/: __init__.py  actions.py  contributor_guide.py  dependencies.py  duplicates.py  duplicates_baseline.py  explainability.py  issue_health.py  knowledge_base.py  labels.py  lifecycle.py  low_signal.py  maintainer_cost.py  maintainer_load.py  normalization.py  playbooks.py  quality_breakdown.py  (+3 more)
tests/: test_automation_autocomment.py  test_cli_governance_mode.py  test_comments_mode_scalability.py  test_phase11_low_signal.py  test_phase13_playbooks.py  test_phase14_maintainer_load.py  test_phase16_governance_mode.py  test_phase1_normalization.py  test_phase3_duplicates_v2.py  test_phase4_lifecycle.py  test_phase5_maintainer_cost.py  test_phase6_contributor_guide.py  test_phase7_labels.py  test_phase8_artifacts.py  test_phase8_dependencies.py  test_phase9_phase10_artifacts.py
tests/fixtures/: issues.json
tests/phases/: test_contributor_guide.py  test_explainability.py  test_issue_health.py  test_knowledge_base.py  test_labels.py  test_lifecycle.py  test_normalization.py  test_quality_breakdown.py  test_weekly_digest.py
